# cpp-project-tmpl

./: .gitignore  CMakeLists.txt  Makefile  README.md  pixi.toml
cmake/: utils.cmake
scripts/: build.sh  setup-tools.sh
src/: CMakeLists.txt  version.h.in
